tests/ui/coherence/coherence-overlap-issue-23516.stderr
error[E0119]: conflicting implementations of trait `Sweet` for type `Box<_>`
  --> $DIR/coherence-overlap-issue-23516.rs:8:1
   |
LL | impl<T:Sugar> Sweet for T { }
   | ------------------------- first implementation here
LL | impl<U:Sugar> Sweet for Box<U> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Box<_>`
   |
   = note: downstream crates may implement trait `Sugar` for type `std::boxed::Box<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
